--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -17,12 +17,12 @@
 
 \usepackage{graphicx}             %% jpg, gif, tiff, and pdf graphics
 \usepackage{moreverb}             %% Verbatim Code Listings
-
+\usepackage{multirow}
 %% set to one and a half line-spacing
 \linespread{1.3} \normalsize
 
 %% end of otago thesis setup
-
+\usepackage{rotating}
 \usepackage{lscape}
 \newcommand{\blandscape}{\begin{landscape}}
 \newcommand{\elandscape}{\end{landscape}}
@@ -30,7 +30,7 @@
 \usepackage{booktabs}
 \usepackage[acronym,style=super,nogroupskip]{glossaries}
 \usepackage{longtable}
-
+\usepackage{threeparttable}
 \ifxetex
   \usepackage{letltxmacro}
   \setlength{\XeTeXLinkMargin}{1pt}
