needed for the long gwas catalog papers table

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -30,6 +30,7 @@
 \usepackage{booktabs}
 \usepackage[acronym,style=super,nogroupskip]{glossaries}
 \usepackage{longtable}
+\usepackage{tabu}
 \usepackage{threeparttable}
 \ifxetex
   \usepackage{letltxmacro}
