--- a/references.bib
+++ b/references.bib
@@ -2652,3 +2652,33 @@ url = {http://www.embase.com/search/results?subaction=viewrecord{\&}from=export{
 volume = {19},
 year = {2017}
 }
+
+@article{Neel1962,
+author = {Neel, J V},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Neel - 1962 - Diabetes mellitus a thrifty genotype rendered detrimental by progress.pdf:pdf},
+issn = {0002-9297},
+journal = {American journal of human genetics},
+keywords = {Chromosomes,Diabetes Mellitus},
+mendeley-groups = {PPARGC1Apaper},
+month = {dec},
+number = {8},
+pages = {353--62},
+pmid = {13937884},
+title = {{Diabetes mellitus: a "thrifty" genotype rendered detrimental by "progress"?}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2557712{\&}tool=pmcentrez{\&}rendertype=abstract http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1932342{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {14},
+year = {1962}
+}
+
+@article{Gosling2015,
+author = {Gosling, Anna L. and Buckley, Hallie R. and Matisoo-Smith, Elizabeth and Merriman, Tony R.},
+doi = {10.1111/ahg.12132},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Gosling et al. - 2015 - Pacific Populations, Metabolic Disease and ‘Just-So Stories' A Critique of the ‘Thrifty Genotype' Hypoth.pdf:pdf},
+issn = {00034800},
+journal = {Annals of Human Genetics},
+keywords = {metabolic disease,obesity,polynesians,thrifty genes,type 2 diabetes},
+pages = {n/a--n/a},
+title = {{Pacific Populations, Metabolic Disease and ‘Just-So Stories': A Critique of the ‘Thrifty Genotype' Hypothesis in Oceania}},
+url = {http://doi.wiley.com/10.1111/ahg.12132},
+year = {2015}
+}
